gcc/testsuite/gcc.dg/noncompile/921116-1.c
void a (void x) {}	/* { dg-error "has incomplete type" } */
